--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
   margin:0;
   box-sizing: border-box;
+  user-select:none;
 }
 .grid-layout{
   border:10px solid gray;
@@ -30,39 +31,48 @@ button{
   position: fixed;
   height:100vh;
   width:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border:orange 5px solid;
   top:0;
   left:0;
-  background-color:rgb(20 20, 20, 0.9);
+  background-color:rgb(0,0, 0, 0.9);
   transition:1s linear;
 }
 .restart-btn{
+  margin-top:50px;
   border-radius:100px;
   background-color:teal;
   letter-spacing: 10px;
   font-size:72px;
   width:400px;
-  position:relative;
-  top:40%;
-  display:inline-block;
-  margin-left:40%;
   height:150px;
+  cursor: pointer;
+  transition: 0.3s ease-in;
+}
+.restart-btn:hover{
+background-color: goldenrod;
 }
 .btn-div{
   display:flex;
   justify-content: center;
 }
 .start-btn{
+  cursor:pointer;
+  margin-top:100px;
   letter-spacing: 8px;
   border-radius:10px;
-  background-color:yellow;
+  background-color:teal;
   padding:10px;
 }
+.start-btn:hover{
+  background-color: goldenrod;
+}
 .winnerText{
+  margin-bottom: 50px;
   font-size:120px;
-  position: relative;
-  top:30%;
-  margin-left:35%;
   color:lightseagreen;
 }
 .turn{
@@ -70,7 +80,6 @@ button{
   margin:auto;
 }
 .nameInputs{
-  border:5px solid green;
   display:flex;
   padding:10px;
   font-size:24px;
